fix icons positions on mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,19 @@ h2 {
     top: 0.6rem;
     min-height: 30px;
     min-width: 30px;
+    margin-left: 1.8rem;
 }
+
+
 
 h1 svg {
     position: relative;
     top: 0.35rem;
 }
 
+
+@media screen and (max-width: 700px) {
+    .h2style svg {
+        top: 1rem;
+    }
+}
